[tool.poetry]
name = "celastiacloud"
version = "0.1.0"
description = ""
authors = ["ekenesbek <ekenesbek@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = {extras = ["standard"], version = "^0.115.6"}
spacy = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
